# Voice-Receptionist-Agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-dev.sh
.github/workflows/: deploy.yml
src/: main.py
src/api/: deps.py  exceptions.py
src/api/routers/: __init__.py  agent.py  analytics.py  onboarding.py  telephony.py  twilio_webhooks.py  voice.py
src/config/: settings.py
src/core/conversation/: __init__.py  engine.py  handlers.py  onboarding_engine.py  prompts.py  redis_session.py
src/core/services/: __init__.py  assemblyai.py  audio_utils.py  backend_client.py  call_store.py  elevenlabs.py  openai.py  twilio_client.py  vonage.py
src/core/types/: __init__.py  schemas.py
src/middleware/: __init__.py  auth.py  request_id.py
src/schemas/: __init__.py  agent.py  call.py  voice.py
tests/: conftest.py  dummy_business_db.json  local_call_simulator.py  local_voice_conversation.py  mock_backend.py
tests/api/: test_agent.py  test_telephony.py  test_voice.py
tests/core/: test_backend_client.py  test_conversation_engine.py
