[tool.poetry]
name = "ai-voice-service"
version = "0.1.0"
description = "FastAPI microservice for AI-driven real-time voice interactions"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
slowapi = "^0.1.7"
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {version = "^0.27.1", extras = ["standard"]}
httpx = "^0.27.0"
loguru = "^0.7.2"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
tenacity = "^8.2.3"
openai = "^1.12.0"
anthropic = "^0.21.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"

[tool.poetry.scripts]
serve = "uvicorn src.main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
